<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ruan.minicalcv2.MainActivity">

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="dividir"
        android:text="@string/btn_dividir"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="294dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_numero_1"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="125dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_numero_2"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="185dp" />

    <EditText
        android:id="@+id/edtTxtNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/edtTxtNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="159dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_titulo"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="27dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_resultado"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="397dp" />

    <EditText
        android:id="@+id/edtTxtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="372dp" />

    <Button
        android:id="@+id/btnSubtrair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="subtrair"
        android:text="@string/btn_subtrair"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="multiplicar"
        android:text="@string/btn_multiplicar"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="294dp" />

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="somar"
        android:text="@string/btn_somar"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="231dp" />
</android.support.constraint.ConstraintLayout>
